# csv2qif

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
csv2qif/: __init__.py  csv2qif.py  transaction_writer.py
hold/: setup.cfg  test-file.csv
