[tool.poetry]
name = "csv2qif"
version = "0.1.1"
description = "Convert CSV file to QIF format."
authors = ["Edward Bridges"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ebridges/csv2qif"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Home Automation",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
docopt = "^0.6.2"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
wheel = "^0.38.4"
twine = "^4.0.2"

[tool.poetry.scripts]
csv2qif = 'csv2qif.csv2qif:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
