[project]
name = "csv2qif"
description = "Convert financial transactions in CSV format to QIF files."
authors = [{ name = "Edward Bridges", email = "github@eqbridges.com"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Home Automation",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" =  "https://github.com/ebridges/csv2qif"
"Bug Tracker" = "https://github.com/ebridges/csv2qif/issues"

[project.optional-dependencies]
dev = [ "black" ]
build = [ "build" ]

[project.scripts]
csv2qif = 'csv2qif.csv2qif:main'

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "csv2qif.__version__"}

[build-system]
requires = [ "setuptools >= 67.0", "wheel" ]
build-backend = "setuptools.build_meta"
