[metadata]
name = csv2qif
version = attr: csv2qif.__version__
description = Convert CSV file to QIF format.
author = Edward Bridges
license = MIT
readme = README.md
repository = https://github.com/ebridges/csv2qif
classifiers = 
    Development Status :: Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Topic :: Home Automation
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
